# tapehoard

./: .dockerignore  .gitignore  AGENTS.md  GEMINI.md  LICENSE.md  PLAN.md  README.md  justfile  tapehoard.service
backend/: alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 193bb204c677_add_fts_table.py  1b59e22b9b7a_remove_is_indexed_flag.py  1bed186f8732_add_media_priority.py  33d682d2c089_add_splitting_support.py  349e61f9e856_add_indexes_for_discrepancy_queries.py  38cb9df7a18c_fix_fts_triggers.py  51c095df4615_add_path_index.py  5e867c5b4930_sync_models.py  6a15f2e5b03b_add_structured_location_and_type_.py  734957a4e25f_ensure_fts_triggers_and_populate_index.py  7f8e9d10c2a3_add_is_cancelled_to_jobs.py  806e933ac89b_add_is_ignored_by_policy_to_filesystem_.py  9a6e70fabf7b_initial_schema.py  ac51f5e25832_add_missing_indexes.py  ba6ba431e8e6_add_unique_constraint_to_restore_cart_.py  bbe2fb40a559_add_secret_reference_columns.py  c2512c86348b_add_is_deleted_to_filesystem_state.py  c2983e8729c5_add_redundancy_coverage.py  d1271a4ba29d_add_job_logs_table.py  e851b23b0f5d_add_missing_acknowledged_at.py  fbbc0a40a840_add_media_timestamps.py  ffdd68ee8ee3_remove_unused_backup_models.py
backend/app/: main.py  start_test_server.py
backend/app/api/: archive.py  backups.py  common.py  inventory.py  oauth.py  restores.py  schemas.py  system.py
backend/app/core/: config.py  (+1 more)
backend/scripts/: generate_openapi.py
backend/tests/: conftest.py  test_api_backups.py  test_api_discrepancies.py  test_api_inventory.py  test_api_jobs.py  test_api_restores.py  test_api_settings.py  test_api_system.py  test_core_utils.py  test_filesystem_search.py  test_provider_cloud.py  test_provider_hdd.py  test_provider_tape.py  test_redundancy_e2e.py  test_service_archiver.py  test_service_scanner.py  test_service_scheduler.py
(+107 files in other folders)
