[project]
name = "tapehoard"
version = "0.1.0"
description = "A robust, index-driven Tape Backup Manager"
readme = "../README.md"
requires-python = ">=3.10"
dependencies = [
    "alembic",
    "fastapi",
    "sqlalchemy",
    "uvicorn[standard]",
    "prometheus-client",
    "apscheduler",
    "apprise",
    "loguru>=0.7.3",
    "pydantic-settings>=2.14.0",
    "pathspec>=1.1.0",
    "boto3>=1.42.94",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.uv]
managed = true

[dependency-groups]
dev = [
    "pre-commit>=4.6.0",
    "pytest>=9.0.3",
    "ruff>=0.15.11",
    "ty>=0.0.32",
]
