[project]
name = "tapehoard"
version = "0.1.0"
description = "A robust, index-driven Tape Backup Manager"
readme = "../README.md"
requires-python = ">=3.10"
dependencies = [
    "alembic",
    "fastapi",
    "sqlalchemy",
    "uvicorn[standard]",
    "prometheus-client",
    "apscheduler",
    "apprise",
    "loguru>=0.7.3",
    "pydantic-settings>=2.14.0",
    "pathspec>=1.1.0",
    "boto3>=1.42.94",
    "python-multipart>=0.0.26",
    "cryptography>=47.0.0",
    "pycryptodome>=3.23.0",
    "psutil>=7.2.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.uv]
managed = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "--cov=app --cov-report=term-missing --cov-report=xml"

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pre-commit>=4.6.0",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.1.0",
    "pytest-mock>=3.15.1",
    "ruff>=0.15.11",
    "ty>=0.0.32",
]
